# tiago_dual_teleop

./: README.md  ui_v3.py
joy_teleop/: CMakeLists.txt  README.md  package.xml
joy_teleop/launch/: example.launch  gamepad_teleop.launch  moveit_servo.launch  teleop.launch  vive_teleop.launch
joy_teleop/scripts/: gamepad_teleop.py  joints_control.py  joy_teleop.py  joy_teleop_base.py  tiago_arm_position_control.py  vive_pose_mapping.py  vive_teleop.py
vive_teleop/: CMakeLists.txt  package.xml
vive_teleop/launch/: gamepad_teleop.launch  object_transforms.launch  vive_teleop.launch
vive_teleop/scripts/: data_recorder.py  ee_publisher.py  gamepad_teleop.py  tiago_arm_gamepad_control.py  tiago_arm_position_control.py  vive_pose_mapping.py  vive_teleop.py
vive_teleop/scripts/~/RAL2024/teleop_data/: head_torso_20240410_162822.csv  head_torso_20240410_162926.txt
vive_teleop/src/: incrementer_server.cpp
